# bquant

./: .git_commit_message.txt  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  MANIFEST.in  README.md  SETUP_READTHEDOCS.md  VIBE.md  pyproject.toml  requirements-docs.txt  requirements.txt  zoval_check.md
.claude/: settings.json
.depr_rules/: cursor.md
bquant/: __init__.py  cli.py
changelogs/: CHANGE_TRACE_LOG_2025-01-27.md  CHANGE_TRACE_LOG_2025-08-27.md  CHANGE_TRACE_LOG_2025-08-28.md  CHANGE_TRACE_LOG_2025-08-29.md  CHANGE_TRACE_LOG_2025-08-30.md  CHANGE_TRACE_LOG_2025-08-31.md  CHANGE_TRACE_LOG_2025-09-01.md  CHANGE_TRACE_LOG_2025-09-02.md  CHANGE_TRACE_LOG_2025-09-03.md  CHANGE_TRACE_LOG_2025-10-05.md  CHANGE_TRACE_LOG_2025-10-06.md  CHANGE_TRACE_LOG_2025-10-08.md  CHANGE_TRACE_LOG_2025-10-09.md  CHANGE_TRACE_LOG_2025-10-12.md  CHANGE_TRACE_LOG_2025-10-13.md  CHANGE_TRACE_LOG_2025-10-14.md  CHANGE_TRACE_LOG_2025-10-17.md  CHANGE_TRACE_LOG_2025-10-18.md  CHANGE_TRACE_LOG_2025-10-19.md  CHANGE_TRACE_LOG_2025-10-20.md  CHANGE_TRACE_LOG_2025-10-21.md  CHANGE_TRACE_LOG_2025-10-22.md  CHANGE_TRACE_LOG_2025-10-23.md  (+17 more)
codemap/: .gitignore  BACKLOG.md  DESIGN.md  README.md  pyproject.toml
codemap/codemap/: __init__.py  cli.py  model.py  query.py  store.py
codemap/codemap/extract/: __init__.py  griffe_extractor.py
codemap/codemap/serve/: __init__.py  api_surface.py  audit.py
codemap/gaps/: README.md  coverage_gap_analysis_2026-07-24.md
codemap/tests/: test_m0_api_surface.py  test_m1_query.py
(+541 files in other folders)
