[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codemap"
version = "0.0.1"
description = "Static analyzer that turns a package's source into a queryable code graph."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "griffe>=2.0",
    "networkx>=3.0",
]

[project.scripts]
codemap = "codemap.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codemap*"]
exclude = ["tests*"]
